dont show 3d on mobile and fix hero styles

--- a/docs/src/main/product-page-src/src/styles/hero.css
+++ b/docs/src/main/product-page-src/src/styles/hero.css
@@ -52,7 +52,30 @@ canvas {
 .hero .gradient.subtraction {
   background-image: url("../../static/img/subtraction.svg");
   clip-path: none;
+  background-size: 100vw;
+  height: 120vh;
+  background-position-y: 100%;
 }
+
+@media (min-width: 2000px) {
+  .hero .gradient.subtraction {
+    background-position-y: -5vh;
+  }
+}
+
+/* @media (min-width: 1281px) {
+  .hero .gradient.subtraction {
+    background-position-y: -50vh;
+    height: 130vh;
+  }
+} */
+
+/* @media (min-width: 1025px) and (max-width: 1281px) {
+  .hero .gradient.subtraction {
+    background-position-y: -100vh;
+    height: 130vh;
+  }
+} */
 
 @media (max-width: 600px) {
   .hero .gradient {
@@ -66,24 +89,6 @@ canvas {
   }
   .hero .gradient.subtraction {
     background-size: cover;
-  }
-}
-@media (min-width: 1025px) {
-  .hero .gradient.subtraction {
-    background-position-y: -100vh;
-    height: 130vh;
-  }
-}
-@media (min-width: 1281px) {
-  .hero .gradient.subtraction {
-    background-position-y: -50vh;
-    height: 130vh;
-  }
-}
-@media (min-width: 1400px) {
-  .hero .gradient.subtraction {
-    background-position-y: 0;
-    height: 100vh;
   }
 }
 
